# scraparr

./: .gitignore  Dockerfile  Dockerfile-pylint  README.md  compose-dev.yaml  compose.yaml  config.cnf  config.yaml  pyproject.toml  requirements.txt  sample.env
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration-form.yaml  integration-template.md
.github/workflows/: main-image.yml  publish-image.yml  publish-pr-image.yaml  pylint.yml  remove-pr-image.yml
dashboards/: README.md  dashboard1.json
portainer/: template-2.json  template-3.json
src/: middleware.py  scraparr.py
src/connectors/: __init__.py  radarr.py  sonarr.py
src/metrics/: radarr.py  sonarr.py
src/scraparr/: const.py  middleware.py  requirements.txt  scraparr.py  util.py
src/scraparr/connectors/: __init__.py  bazarr.py  jellyfin.py  jellyseerr.py  overseerr.py  prowlarr.py  radarr.py  readarr.py  seer.py  seerr.py  sonarr.py  sonarr_api.py  util.py  whisparr.py
src/scraparr/metrics/: bazarr.py  clear.py  general.py  jellyfin.py  jellyseerr.py  overseerr.py  prowlarr.py  radarr.py  readarr.py  sonarr.py  whisparr.py
src/scraparr/parser/: __init__.py
