[project]
name = "scraparr"
version = "1.0.0"
description = "Prometheus Exporter for *Arr Suite"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.scripts]
scraparr = "scraparr.scraparr:main"

[tool.setuptools.dynamic]
dependencies = {file = ["src/scraparr/requirements.txt"]}
